--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,8 +1,8 @@
 body {
   background-color: #15b392;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  height: 100vh;
   cursor: url('src/assets/img/fly.png'), pointer;
+  margin: 0;
 }
 
 @font-face {
